# speed

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pyproject.toml  schema.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-website.yml  validate-json.yml
assets/: index-CmTSfvqK.js  index-DZr10IUx.js  index-Dl8iitjM.js  index-nG3gR4Tf.js  index-srRuuAxZ.js
data/: 1751841677285.json
data/spin-j1-j2/sub-0/: sub-0.json
docs/: index.html
examples/: example_submission.json
schema/: __init__.py  generate.py  lattice.py  problems.py  schema.py
website/: index.html  package-lock.json  vite.config.js
website/src/: index.jsx
