[project]
name = "speed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Filippo Vicentini", email = "filippovicentini@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
generate_scheme = "schema.generate:generate_scheme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["schema*"]
